--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+.hidden {
+  display: none;
+}
+
 body {
   background-color: #efffbb;
 }
@@ -12,6 +22,43 @@ body {
   margin-left: 40%;
   margin-right: 40%;
   margin-top: 100px;
+}
+.landingpage__background {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../images/main_background.png");
+}
+.landingpage__logo {
+  padding: 46px 0;
+}
+.landingpage__btn--start {
+  background: none;
+  border: 0;
+  background-image: url("../images/iniciar_btn.png");
+  background-size: cover;
+  height: 110px;
+  width: 430px;
+}
+.landingpage__btn--start:hover {
+  background-image: url("../images/iniciar_orange_btn.png");
+}
+.landingpage__btn--register {
+  background: none;
+  border: 0;
+  background-image: url("../images/iniciar_btn.png");
+  background-size: cover;
+  height: 110px;
+  width: 430px;
+  border-radius: 0px;
+}
+.landingpage__btn--register:hover {
+  background-image: url("../images/iniciar_orange_btn.png");
 }
 
 .input {
