--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+.hidden{
+    display: none;
+}
 
 body{
     background-color: #efffbb;
