--- a/css/_landingpage.scss
+++ b/css/_landingpage.scss
@@ -21,7 +21,20 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-image: url("../images/main_background.png");
+        background-image: url("../images/institucion.png");
+
+        &--credentials{
+            width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-image: url("../images/backgorund_dark.jpg");
+
+        }
     }
 
     &__logo{
@@ -29,13 +42,21 @@
     }
 
     &__btn{
+        
+        display: flex;
+        justify-content: space-around;
+        width: 48%;
+
         &--start{
             background: none;
             border: 0;
+            width: 325px;
+            height: 80px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
             background-image: url("../images/iniciar_btn.png");
-            background-size: cover;
-            height: 110px;
-            width: 430px;
+            
 
         }
         &--start:hover{
@@ -44,15 +65,52 @@
         &--register{
             background: none;
             border: 0;
-            background-image: url("../images/iniciar_btn.png");
-            background-size: cover;
-            height: 110px;
-            width: 430px;
-            border-radius: 0px;
+            width: 325px;
+            height: 80px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-image: url("../images/registrar_btn.png");
+
         }
         &--register:hover{
-            background-image: url("../images/iniciar_orange_btn.png");
+            background-image: url("../images/registrar_btn.png");
             }
+        &--send{
+            background: none;
+            border: 0;
+            width: 100%;
+            height: 60px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-image: url('../images/iniciar_btn.png');
+            
+        }
+
+        &--sendRegister{
+            background: none;
+            border: 0;
+            width: 100%;
+            height: 60px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-image: url("../images/registrar_btn.png");
+        }
+        &--send:hover{
+            background-image: url('../images/iniciar_btn.png');
+
+        }
+    }
+
+    &__img{
+        width: 100%;
+        height: 60px;
+        background-image: url("../images/iniciar_title.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
     }
 
 
