--- a/css/main.css
+++ b/css/main.css
@@ -119,4 +119,24 @@ body {
   width: 100%;
   font-weight: 600;
   padding-top: 20px;
+}
+
+.comic {
+  display: flex;
+  align-items: center;
+}
+.comic--page {
+  width: 100%;
+  height: 1786px;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../images/pagina_1.png");
+}
+.comic--arrow {
+  width: 10%;
+  height: 180px;
+  padding: 30px, 0;
 }/*# sourceMappingURL=main.css.map */
