--- a/css/_comic.scss
+++ b/css/_comic.scss
@@ -5,7 +5,7 @@
 
     &--page{
         width: 100%;
-        height:1786px;
+        height:1886px;
         background-size: cover;
         display: flex;
         flex-direction: column;
@@ -15,9 +15,66 @@
 
     }
 
-    &--arrow{
-    width: 10%;
-    height: 180px;
-    padding: 30px, 0;
+    &--part{
+        width: 100%;
+        height: 1000px;
+        background-size: cover;
+
+        background-image: url("../images/pag3_question.png");
+
+    }
+
+    &--arrowPrev{
+        width: 120px;
+        height:120px;
+        background-size: cover;
+        background-image: url("../images/previous_arrow.png");
+    }
+    &--arrowPrev:hover{
+
+        background-image: url("../images/previous_arrow_hover.png");
+    
+        }
+
+    &--arrowNext{
+        width: 120px;
+        height:120px;
+        background-size: cover;
+        background-image: url("../images/next_arrow.png.png");
+
+    }
+
+    &--arrowNext:hover{
+
+    background-image: url("../images/next_arrow_hover.png");
+
+    }
+
+    &--container{
+        width: 100%;
+        height: auto;
+    }
+
+    &--btn{
+        background: none;
+            border: 0;
+            width: 100%;
+            height: 123px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+    }
+
+    &--opcions{
+        display: flex;
+    }
+
+    &--opcion1{
+        background-image: url("../images/choice 1.1.png");
+
+    }
+    &--opcion2{
+        background-image: url("../images/choice 1.2.png");
+        
     }
 }
