--- a/css/_landingpage.scss
+++ b/css/_landingpage.scss
@@ -72,7 +72,7 @@
 
         }
         &--register:hover{
-            background-image: url("../images/registrar_btn.png");
+            background-image: url("../images/registrar_btn_hover.png");
             }
         &--send{
             background: none;
@@ -84,6 +84,11 @@
             background-position: center;
             background-image: url('../images/iniciar_btn.png');
             
+        }
+
+        &--send:hover{
+            background-image: url('../images/iniciar_btn.png');
+
         }
 
         &--sendRegister{
@@ -100,6 +105,22 @@
             background-image: url('../images/iniciar_btn.png');
 
         }
+
+        &--read{
+            margin: 20px 0;
+            width: 100%;
+            height: 80px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-image: url('../images/leer_btn.png');
+
+        }
+
+        &--read:hover{
+            background-image: url('../images/leer_orange_btn.png');
+
+        }
     }
 
     &__img{
@@ -109,6 +130,67 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
+    }
+
+    &__title{
+        margin:  20px 0;
+        width: 100%;
+        height: 60px;
+        background-image: url("../images/cap_title.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+    }
+
+    &__seccion{
+        display: flex;
+        flex-direction: column;
+        width: 20%;
+    }
+
+    &__caps{
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-image: url("../images/backgorund_dark.jpg");
+    }
+
+    &__cap{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__container{
+        display: flex;
+        align-items: center;
+        width: 20%;
+    }
+
+    &__cover{
+        width:90%;
+
+    }
+
+    &__arrow{
+        width: 10%;
+        height: 90px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        background-image: url("../images/next_arrow.png.png");
+
+    }
+
+    &__arrow:hover{
+        background-image: url("../images/next_arrow_hover.png");
+
+
     }
 
 
