--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #efffbb;
+  background-color: white;
 }
 
 .landingpage {
@@ -77,7 +77,7 @@ body {
   background-image: url("../images/registrar_btn.png");
 }
 .landingpage__btn--register:hover {
-  background-image: url("../images/registrar_btn.png");
+  background-image: url("../images/registrar_btn_hover.png");
 }
 .landingpage__btn--send {
   background: none;
@@ -87,6 +87,9 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  background-image: url("../images/iniciar_btn.png");
+}
+.landingpage__btn--send:hover {
   background-image: url("../images/iniciar_btn.png");
 }
 .landingpage__btn--sendRegister {
@@ -102,6 +105,18 @@ body {
 .landingpage__btn--send:hover {
   background-image: url("../images/iniciar_btn.png");
 }
+.landingpage__btn--read {
+  margin: 20px 0;
+  width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-image: url("../images/leer_btn.png");
+}
+.landingpage__btn--read:hover {
+  background-image: url("../images/leer_orange_btn.png");
+}
 .landingpage__img {
   width: 100%;
   height: 60px;
@@ -109,6 +124,55 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+.landingpage__title {
+  margin: 20px 0;
+  width: 100%;
+  height: 60px;
+  background-image: url("../images/cap_title.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.landingpage__seccion {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+.landingpage__caps {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../images/backgorund_dark.jpg");
+}
+.landingpage__cap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.landingpage__container {
+  display: flex;
+  align-items: center;
+  width: 20%;
+}
+.landingpage__cover {
+  width: 90%;
+}
+.landingpage__arrow {
+  width: 10%;
+  height: 90px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-image: url("../images/next_arrow.png.png");
+}
+.landingpage__arrow:hover {
+  background-image: url("../images/next_arrow_hover.png");
 }
 
 .input {
@@ -127,7 +191,7 @@ body {
 }
 .comic--page {
   width: 100%;
-  height: 1786px;
+  height: 1886px;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -135,8 +199,49 @@ body {
   align-items: center;
   background-image: url("../images/pagina_1.png");
 }
-.comic--arrow {
-  width: 10%;
-  height: 180px;
-  padding: 30px, 0;
+.comic--part {
+  width: 100%;
+  height: 1000px;
+  background-size: cover;
+  background-image: url("../images/pag3_question.png");
+}
+.comic--arrowPrev {
+  width: 120px;
+  height: 120px;
+  background-size: cover;
+  background-image: url("../images/previous_arrow.png");
+}
+.comic--arrowPrev:hover {
+  background-image: url("../images/previous_arrow_hover.png");
+}
+.comic--arrowNext {
+  width: 120px;
+  height: 120px;
+  background-size: cover;
+  background-image: url("../images/next_arrow.png.png");
+}
+.comic--arrowNext:hover {
+  background-image: url("../images/next_arrow_hover.png");
+}
+.comic--container {
+  width: 100%;
+  height: auto;
+}
+.comic--btn {
+  background: none;
+  border: 0;
+  width: 100%;
+  height: 123px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.comic--opcions {
+  display: flex;
+}
+.comic--opcion1 {
+  background-image: url("../images/choice 1.1.png");
+}
+.comic--opcion2 {
+  background-image: url("../images/choice 1.2.png");
 }/*# sourceMappingURL=main.css.map */
